--- a/rootdir/etc/init.target.rc
+++ b/rootdir/etc/init.target.rc
@@ -165,8 +165,7 @@ service vibrator_calibration /vendor/bin/vibrator_calibration
 on property:sys.boot_completed=1
     start vibrator_calibration
 
-    # Set up swap
-    write /sys/devices/virtual/block/vbswap0/disksize 3221225472
+    # Enable ZRAM on boot_complete
     swapon_all /vendor/etc/fstab.qcom
 
     # Back to default VM settings
